a1/tests/reject/10.ul
void MAIN() {
	int l;
	1foo;
}
